--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "joi": "^13.0.1",
     "morgan": "^1.9.0",
     "sequelize": "^4.15.0",
     "sqlite3": "^3.1.8"
