--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "l": "^0.6.0",
+    "materialize-css": "^0.100.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^0.16.9"
