--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "materialize-css": "^0.100.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.16.9"
+    "vuetify": "^0.16.9",
+    "vuex": "^3.0.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
