--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "materialize-css": "^0.100.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-youtube-embed": "^2.1.3",
     "vuetify": "^0.16.9",
     "vuex": "^3.0.0",
     "vuex-router-sync": "^5.0.0"
