--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "l": "^0.6.0",
+    "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
